@@ -1,3 +1,6 @@
+29 November 2006: Wouter
+	- Fixed getaddrinfo error message to be more descriptive.
+
 28 November 2006: Wouter
 	- Debugging 10k zones transfer, set so that zones waiting for a
 	  socket do not get timeouts.
